# tasche

./: .dev.vars.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN_LANGUAGE.md  LESSONS_LEARNED.md  Makefile  PR_DESCRIPTION_CFBOUNDARY_MIGRATION.md  PR_DESCRIPTION_GASKET_MIGRATION.md  README.md  TODO.md  conftest.py  deploy.json  package-lock.json  package.json  pyproject.toml  skills-lock.json  wrangler.jsonc
assets/: bookmarklet.html  bookmarklet.js  design-language.html  index.html  manifest.json  sw.js
docs/: architecture-diagram.md  architecture.md  crap-design-audit.md  deploy-guide.md  design-language.html  httpx-pyodide-headers-bug.md  state-machines.md  tts-models.md
extension/: background.js  manifest.json  popup.css  popup.html  popup.js
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
migrations/: 0001_initial.sql  0002_highlights.sql  0002_unique_url.sql  0003_original_status.sql  0004_notes.sql  0004_tag_rules.sql  0005_feeds.sql  0005_remove_reading_status.sql  0006_user_preferences.sql  0007_drop_tag_rules.sql  0008_audio_generated_at.sql
readability-worker/: package.json  wrangler.jsonc
scripts/: bundle_size.py  diagnose_article.py  lint-design.mjs  smoke-test.py
specs/: admin-features.md  bookmarklet-tagging.md  deploy-button.md  mobile-bottom-nav.md  readability-service.md  tagging-spec.md  tagging-ux-research.md  tasche-spec.md  tts-sentence-highlighting.md
src/: entry.py  observability.py  security.py  utils.py  wide_event.py  wrappers.py
(+327 files in other folders)
