[project]
name = "tasche"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0,<0.130",
    "markdownify>=1.2.2,<1.3",
    "httpx>=0.28.1,<0.29",
    "beautifulsoup4>=4.14.3,<4.15",
    "cfboundary @ git+https://github.com/adewale/cfboundary@v0.1.4",
]

[dependency-groups]
workers = ["workers-py"]
test = [
    "hypothesis>=6.151.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
